--- a/.github/workflows/c-compilation-ci.yml
+++ b/.github/workflows/c-compilation-ci.yml
@@ -12,6 +12,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - uses: actions/checkout@v2
+    
     - name: setup ncurses
       run: | 
         sudo apt-get update -y &&
